[gd_scene load_steps=8 format=3 uid="uid://buhrv3yofi81h"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_84ky7"]
[ext_resource type="SpriteFrames" uid="uid://b0r0g8qo2om4v" path="res://Resources/playerblue.tres" id="2_n70uf"]
[ext_resource type="Resource" uid="uid://bke11hjl8viu2" path="res://Resources/BaseMovement.tres" id="2_s8k38"]
[ext_resource type="PackedScene" uid="uid://bru363u4k8kyc" path="res://Scenes/bullet.tscn" id="3_8gkfv"]
[ext_resource type="Texture2D" uid="uid://bcoa8pk0uhtk3" path="res://Images/shooty.png" id="4_hebbx"]
[ext_resource type="Texture2D" uid="uid://bsj5vtxca6mhe" path="res://Images/bang.png" id="6_kxhu2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_euf5n"]
size = Vector2(14, 21)

[node name="Player" type="CharacterBody2D"]
z_index = 25
collision_layer = 2
script = ExtResource("1_84ky7")
moveData = ExtResource("2_s8k38")
Bullet = ExtResource("3_8gkfv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2.38419e-07, -2.38419e-07)
scale = Vector2(0.9375, 0.9375)
sprite_frames = ExtResource("2_n70uf")
animation = &"run"
frame = 1
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
texture_filter = 1
shape = SubResource("RectangleShape2D_euf5n")

[node name="LadderChecker" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, -10)
target_position = Vector2(0, 23)
collide_with_areas = true
collide_with_bodies = false

[node name="BounceChecker" type="RayCast2D" parent="."]
visible = false
position = Vector2(4, -10)
target_position = Vector2(0, 23)
collision_mask = 4

[node name="BounceChecker2" type="RayCast2D" parent="."]
visible = false
z_index = 9
position = Vector2(-4, -10)
target_position = Vector2(0, 23)
collision_mask = 4

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="Gun" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 4)
texture = ExtResource("4_hebbx")
offset = Vector2(10, 0)
region_enabled = true
region_rect = Rect2(2.619, 4.59358, 10.8104, 6.48627)

[node name="Muzzle" type="Marker2D" parent="Gun"]
position = Vector2(24, -1)

[node name="Bang" type="Sprite2D" parent="Gun"]
position = Vector2(0, -1)
texture = ExtResource("6_kxhu2")
offset = Vector2(22, 0)

[node name="Timers" type="Node" parent="."]

[node name="JumpBuffer" type="Timer" parent="Timers"]
wait_time = 0.111
one_shot = true

[node name="BulletDelay" type="Timer" parent="Timers"]
wait_time = 0.69
one_shot = true

[node name="MuzzleFlash" type="Timer" parent="Timers"]
one_shot = true

[connection signal="timeout" from="Timers/JumpBuffer" to="." method="_on_jump_buffer_timeout"]
[connection signal="timeout" from="Timers/BulletDelay" to="." method="_on_bullet_delay_timeout"]
[connection signal="timeout" from="Timers/MuzzleFlash" to="." method="_on_muzzle_flash_timeout"]
